Fixing horizontal scrollbar in Webkit.

--- a/Clunch/Clunch.Web/Content/Site.less
+++ b/Clunch/Clunch.Web/Content/Site.less
@@ -46,6 +46,7 @@ table.contactList {
 
 ::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
 }
  
 ::-webkit-scrollbar-track {
@@ -56,6 +57,10 @@ table.contactList {
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.7); 
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
 }
 
 
